Upgrade dependencies (#73)